2002-10-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/grace-init.ly (startGraceMusic): shorten default grace stem
	length.

	* input/regression/spacing-to-grace.ly: new file.

	* input/regression/spacing-end-of-line.ly: new file.

	* lily/note-spacing.cc (get_spacing): take into account breakable
	stuff sticking out at the left (time sig change at line break).

	* lily/spacing-spanner.cc (breakable_column_spacing): junk weird
	raggedright code.

	* scm/music-functions.scm (make-voice-props-set): add
	staff-position for mm rests.
 
	* lily/spacing-spanner.cc (musical_column_spacing): shrink space
	before grace notes a little.

	* lily/parser.yy (sup_quotes): use '\'' for sup_quotes.

	* lily/break-align-interface.cc (do_alignment): right-edge spacing
	key adds space at the end of line. 

2002-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: Fix beams.

	* buildscripts/mf-to-table.py: Add EncodingScheme.

	* scm/sketch.scm: Resurrect.

2002-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/multi-measure-rest.cc: use breve rests for measure lengths
	longer than 4/4. Patch courtesy Kim Shrier <kim@tinker.com>.

2002-10-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/c++-rules.make: Fixes for bison 1.50.

	* lily/lexer.ll (My_lily_lexer): Avoid silly flex induced gcc warnings.

2002-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/my-lily-lexer.cc (prepare_for_next_token): use previous
	token for origin information.

	* lily/parser.yy (My_lily_lexer): do identifier location and
	cloning from lexer.

	* scm/music-functions.scm (make-multi-measure-rest): move mmrest
	logic out of the parser. Add bar checks on both ends.

	* Documentation/user/refman.itely (Multi measure rests): add more
	notes about mm rests.

2002-10-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/bar-scripts.ly: Re-enable.

	* lily/parser.yy:
	* stepmake/stepmake/c++-rules.make: Fixes for bison 1.51 to be