@@ -115,8 +115,8 @@ Bar_number_engraver::create_items ()
 }
 
 ENTER_DESCRIPTION(Bar_number_engraver,
-/* descr */       "A bar number is created whenever measurePosition is zero. It is
-put on top of all staves, and appears only at  left side of the staff.",
+/* descr */       "A bar number is created whenever measurePosition is zero. It is\n"
+"put on top of all staves, and appears only at  left side of the staff.",
 /* creats*/       "BarNumber",
 /* accepts */     "",
 /* acks  */      "break-aligned-interface",
