@@ -84,7 +84,6 @@ static Keyword_ent the_key_tab[]={
   {"partcombine", PARTCOMBINE},
   {"score", SCORE},
   {"script", SCRIPT},
-  {"stylesheet", STYLESHEET},
   {"skip", SKIP},
   {"tempo", TEMPO},
   {"translator", TRANSLATOR},
