@@ -39,7 +39,7 @@
 "clipping" "[cm]m" "coda" "complex" 
 "\\(command\\)?spanrequest" "consists\\(end\\)?"
 "context" "contrabasso" "\\(de\\)?cr" "default" "denies" "different" "dirs"
-"down\\(bow\\|prall\\)?" "duration" "\\(dynamic\\|text\\)?script"
+"down\\(bow\\|prall\\)?" "duration" "\\(text\\)?script"
 "eccentric" "eg" "embeddedps" "elementdescriptions" "\\(end\\)?cresc"
 "ex\\(treme\\)?" "fermata" "f+" "figures" "font" "flageolet" "fp" "fragment" 
 "s?fz" "gliss\\(ando\\)?" "gg" "gmsus" "grace" "gr\\(and\\)?staff"
@@ -60,7 +60,7 @@
 "simultaneous" "singlepart" "skip" "small" "\\(smart\\)?transpose"
 "s[pf]+" "staccat\\(issim\\)?o" "staff\\(height\\|space\\)" "start" 
 "stop\\(ped\\)?"
-"st\\(paper\\|score\\)" "stuff" "stylesheet" "su" "tab" "tempo" "tenuto" 
+"st\\(paper\\|score\\)" "stuff" "su" "tab" "tempo" "tenuto" 
 "thenotes" "thrd" "threevoice" "thumb" "tilt\\(down\\|up\\)" 
 "timb" "times?" "tiny" "toeters" "touch" "translator" 
 "trill" "type" "t\\(wo\\(voice\\(steminvert\\)?\\)?\\)?" 
