@@ -4,7 +4,7 @@
 
 paperSixteen = \paper {
 	staffheight = 16.0\pt
-	\stylesheet #(make-style-sheet 'paper16)
+	\stylesheet #(make-font-list 'paper16)
 
 	\include "params-init.ly"
 }
