@@ -4,8 +4,7 @@
 
 paperTwentysix = \paper {
 	staffheight = 26.0\pt
-	\stylesheet #(make-style-sheet 'paper26)	
-
+	#(define fonts (make-font-list 'paper26))
 	\include "params-init.ly"
 }
 
